Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10471

Sufficiently complicated polygons will make rasterizer fail

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.0
    • 4.7.0
    • GUI: Painting
    • None
    • Tested on Linux/X11
    • 44af23156fac578543e6d17c67d739e75e51c972

      Currently, a rasterPoolSize of 8192 bytes is used in qpaintengine_raster.cpp. If this is reduced to just 128 bytes, then 3 of the tst_qpathclipper::clip2 tests fail. This indicates that a sufficiently large/complex real-world polygon will fail when it exceeds the larger 8192 byte allocation if used in the same way as those tests.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ylopes Yoann Lopes
            wallison Warwick Allison (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes