Patch to QTBUG-10471